# HuBMAP

./: .gitignore  Makefile  README.md  data  pyproject.toml  requirements.txt  train.sh
.github/workflows/: black.yaml
conf/: train.yaml
notebooks/: EDA_CSV.ipynb  Untitled.ipynb  convert_tif_to_img-Copy1.ipynb  convert_tif_to_img.ipynb  convert_tif_to_img_dataset3.ipynb  dataset3_prediction.ipynb  display_datamodule.ipynb  display_tiff_tutrial-Copy1.ipynb  display_tiff_tutrial.ipynb  validation.ipynb
src/: main.py  main_maskformer.py  main_segformer.py
src/data/: data.py  transforms.py
src/model/: loss.py  model.py  transformer.py
src/sandbox/: housdorff_distance.py
